--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="navbar" id="navbar">
         <div class="logo">
-           <a href="/index.html"><img src="/Assets/logo.png" alt="Website Logo"></a>
+           <a href="index.html"><img src="Assets/logo.png" alt="Website Logo"></a>
         </div>
         <nav>
             <ul class="nav-links">
