--- a/About/about.html
+++ b/About/about.html
@@ -5,29 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About-Me Page</title>
-    <link rel="icon" type="image/x-icon" href="/Assets/favicon.png">
+    <link rel="icon" type="image/x-icon" href="Assets/favicon.png">
     <link rel="stylesheet" href="about.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/styles.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
 
     <header class="navbar" id="navbar">
         <div class="logo">
-            <a href="/index.html"><img src="/Assets/logo.png" alt="Website Logo"></a>
+            <a href="index.html"><img src="Assets/logo.png" alt="Website Logo"></a>
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/About/about.html">About</a></li>
-                <li><a href="/Skills/skill.html">Skills</a></li>
-                <li><a href="/Projects/project.html">Projects</a></li>
-                <li><a href="/Blogs/blog.html">Blogs</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About/about.html">About</a></li>
+                <li><a href="Skills/skill.html">Skills</a></li>
+                <li><a href="Projects/project.html">Projects</a></li>
+                <li><a href="Blogs/blog.html">Blogs</a></li>
                 <!-- Dropdown Menu Example -->
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">More</a>
                     <div class="dropdown-content">
-                        <a href="/Photography/photo.html">Photography</a>
-                        <a href="/Contacts/contact.html">Contacts</a>
+                        <a href="Photography/photo.html">Photography</a>
+                        <a href="Contacts/contact.html">Contacts</a>
                     </div>
                 </li>
             </ul>
@@ -42,7 +42,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="about-photo">
-                    <img src="/Assets/photo.png" alt="Chinmaya Pradhan" class="about-img">
+                    <img src="Assets/photo.png" alt="Chinmaya Pradhan" class="about-img">
                 </div>
                 <div class="about-text">
                     <p>Hello, I'm <strong>Chinmaya Pradhan</strong>, a passionate Full-Stack Developer, AI/ML enthusiast, and DevOps specialist. I thrive on building innovative software solutions and tackling complex engineering challenges using cutting-edge technologies like Cloud, Blockchain, and AI. In addition to my technical skills, I am deeply interested in space exploration, fitness, and continuous learning.</p>
@@ -72,12 +72,12 @@
         <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="/About/about.html">About</a></li>
-                <li><a href="/Skills/skill.html">Skills</a></li>
-                <li><a href="/Projects/project.html">Projects</a></li>
-                <li><a href="/Blogs/blog.html">Blogs</a></li>
-                <li><a href="/Photography/photo.html">Photography</a></li>
-                <li><a href="/Contacts/contact.html">Contacts</a></li>
+                <li><a href="About/about.html">About</a></li>
+                <li><a href="Skills/skill.html">Skills</a></li>
+                <li><a href="Projects/project.html">Projects</a></li>
+                <li><a href="Blogs/blog.html">Blogs</a></li>
+                <li><a href="Photography/photo.html">Photography</a></li>
+                <li><a href="Contacts/contact.html">Contacts</a></li>
             </ul>
         </div>
 
@@ -97,6 +97,6 @@
 </footer>
 
     <script src="about.js"></script> <!-- Link to external JavaScript file -->
-    <script src="/main.js"></script> <!-- Link to external JavaScript file -->
+    <script src="main.js"></script> <!-- Link to external JavaScript file -->
 </body>
 </html>
