--- a/About/about.html
+++ b/About/about.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About-Me Page</title>
     <link rel="icon" type="image/x-icon" href="Assets/favicon.png">
-    <link rel="stylesheet" href="About/about.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="about.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
 
@@ -96,7 +96,7 @@
     
 </footer>
 
-    <script src="About/about.js"></script> <!-- Link to external JavaScript file -->
-    <script src="main.js"></script> <!-- Link to external JavaScript file -->
+    <script src="bout.js"></script> <!-- Link to external JavaScript file -->
+    <script src="/main.js"></script> <!-- Link to external JavaScript file -->
 </body>
 </html>
