--- a/About/about.html
+++ b/About/about.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About-Me Page</title>
     <link rel="icon" type="image/x-icon" href="Assets/favicon.png">
-    <link rel="stylesheet" href="about.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/styles.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/My-Creative-Space/About/about.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/My-Creative-Space/styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
 
     <header class="navbar" id="navbar">
         <div class="logo">
-            <a href="index.html"><img src="Assets/logo.png" alt="Website Logo"></a>
+            <a href="/My-Creative-Space/index.html"><img src="/My-Creative-Space/Assets/logo.png" alt="Website Logo"></a>
         </div>
         <nav>
             <ul class="nav-links">
