--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Creative Space </title>
-    <link rel="icon" type="image/x-icon" href="Assets/favicon.png">
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+    <link rel="icon" type="image/x-icon" href="/My-Creative-Space/Assets/favicon.png">
+    <link rel="stylesheet" href="/My-Creative-Space/styles.css"> <!-- Link to external CSS file -->
 
 </head>
 <body>
 
     <header class="navbar" id="navbar">
         <div class="logo">
-           <a href="index.html"><img src="Assets/logo.png" alt="Website Logo"></a>
+           <a href="/My-Creative-Space/index.html"><img src="/My-Creative-Space/Assets/logo.png" alt="Website Logo"></a>
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="About/about.html">About</a></li>
-                <li><a href="Skills/skill.html">Skills</a></li>
-                <li><a href="Projects/project.html">Projects</a></li>
-                <li><a href="Blogs/blog.html">Blogs</a></li>
+                <li><a href="/My-Creative-Space/index.html">Home</a></li>
+                <li><a href="/My-Creative-Space/About/about.html">About</a></li>
+                <li><a href="/My-Creative-Space/Skills/skill.html">Skills</a></li>
+                <li><a href="/My-Creative-Space/Projects/project.html">Projects</a></li>
+                <li><a href="/My-Creative-Space/Blogs/blog.html">Blogs</a></li>
                 <!-- Dropdown Menu Example -->
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">More</a>
                     <div class="dropdown-content">
-                        <a href="Photography/photo.html">Photography</a>
-                        <a href="Contacts/contact.html">Contacts</a>
+                        <a href="/My-Creative-Space/Photography/photo.html">Photography</a>
+                        <a href="/My-Creative-Space/Contacts/contact.html">Contacts</a>
                     </div>
                 </li>
             </ul>
@@ -44,8 +44,8 @@
         <h1 class="home-title">Welcome to <br><span>My Creative Space</span></h1>
         <p class="home-description">A place where creativity meets technical skills. Explore my Projects, Blogs, and personal journey in this interactive space.</p>
         <div class="cta-buttons">
-            <a href="Assets/Resume.pdf" class="btn-primary" download>My Resume</a>
-            <a href="About/about.html" class="btn-secondary">Learn More</a>
+            <a href="/My-Creative-Space/Assets/Resume.pdf" class="btn-primary" download>My Resume</a>
+            <a href="/My-Creative-Space/About/about.html" class="btn-secondary">Learn More</a>
         </div>
     </div>
 </section>
@@ -63,12 +63,12 @@
         <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="About/about.html">About</a></li>
-                <li><a href="Skills/skill.html">Skills</a></li>
-                <li><a href="Projects/project.html">Projects</a></li>
-                <li><a href="Blogs/blog.html">Blogs</a></li>
-                <li><a href="Photography/photo.html">Photography</a></li>
-                <li><a href="Contacts/contact.html">Contacts</a></li>
+                <li><a href="/My-Creative-Space/About/about.html">About</a></li>
+                <li><a href="/My-Creative-Space/Skills/skill.html">Skills</a></li>
+                <li><a href="/My-Creative-Space/Projects/project.html">Projects</a></li>
+                <li><a href="/My-Creative-Space/Blogs/blog.html">Blogs</a></li>
+                <li><a href="/My-Creative-Space/Photography/photo.html">Photography</a></li>
+                <li><a href="/My-Creative-Space/Contacts/contact.html">Contacts</a></li>
             </ul>
         </div>
 
@@ -87,7 +87,7 @@
     
 </footer>
 
-    <script src="main.js"></script> <!-- Link to external JavaScript file -->
+    <script src="/My-Creative-Space/main.js"></script> <!-- Link to external JavaScript file -->
 </body>
 </html>
 
