--- a/Photography/photo.html
+++ b/Photography/photo.html
@@ -5,29 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography Page</title>
-    <link rel="icon" type="image/x-icon" href="/Assets/favicon.png">
-    <link rel="stylesheet" href="photo.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/styles.css"> <!-- Link to external CSS file -->
+    <link rel="icon" type="image/x-icon" href="/My-Creative-Space/Assets/favicon.png">
+    <link rel="stylesheet" href="/My-Creative-Space/Photography/photo.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/My-Creative-Space/styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
 
     <header class="navbar" id="navbar">
         <div class="logo">
-            <a href="/index.html"><img src="/Assets/logo.png" alt="Website Logo"></a>
+            <a href="/My-Creative-Space/index.html"><img src="/My-Creative-Space/Assets/logo.png" alt="Website Logo"></a>
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/About/about.html">About</a></li>
-                <li><a href="/Skills/skill.html">Skills</a></li>
-                <li><a href="/Projects/project.html">Projects</a></li>
-                <li><a href="/Blogs/blog.html">Blogs</a></li>
+                <li><a href="/My-Creative-Space/index.html">Home</a></li>
+                <li><a href="/My-Creative-Space/About/about.html">About</a></li>
+                <li><a href="/My-Creative-Space/Skills/skill.html">Skills</a></li>
+                <li><a href="/My-Creative-Space/Projects/project.html">Projects</a></li>
+                <li><a href="/My-Creative-Space/Blogs/blog.html">Blogs</a></li>
                 <!-- Dropdown Menu Example -->
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">More</a>
                     <div class="dropdown-content">
-                        <a href="/Photography/photo.html">Photography</a>
-                        <a href="/Contacts/contact.html">Contacts</a>
+                        <a href="/My-Creative-Space/Photography/photo.html">Photography</a>
+                        <a href="/My-Creative-Space/Contacts/contact.html">Contacts</a>
                     </div>
                 </li>
             </ul>
@@ -42,42 +42,42 @@
             <h2>Photography Showcase</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="Photos/work1.jpg" alt="Description of Photo 1">
+                    <img src="/My-Creative-Space/Photography/Photos/work1.jpg" alt="Description of Photo 1">
                     <div class="overlay">
                         <h3>Title of Photo 1</h3>
                         <p>A brief description or story behind the photo.</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/work1.jpg" alt="Description of Photo 2">
+                    <img src="/My-Creative-Space/Photography/Photos/work1.jpg" alt="Description of Photo 2">
                     <div class="overlay">
                         <h3>Title of Photo 2</h3>
                         <p>A brief description or story behind the photo.</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/work1.jpg" alt="Description of Photo 3">
+                    <img src="/My-Creative-Space/Photography/Photos/work1.jpg" alt="Description of Photo 3">
                     <div class="overlay">
                         <h3>Title of Photo 3</h3>
                         <p>A brief description or story behind the photo.</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/work1.jpg" alt="Description of Photo 4">
+                    <img src="/My-Creative-Space/Photography/Photos/work1.jpg" alt="Description of Photo 4">
                     <div class="overlay">
                         <h3>Title of Photo 4</h3>
                         <p>A brief description or story behind the photo.</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/work1.jpg" alt="Description of Photo 5">
+                    <img src="/My-Creative-Space/Photography/Photos/work1.jpg" alt="Description of Photo 5">
                     <div class="overlay">
                         <h3>Title of Photo 5</h3>
                         <p>A brief description or story behind the photo.</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="Photos/work1.jpg" alt="Description of Photo 6">
+                    <img src="/My-Creative-Space/Photography/Photos/work1.jpg" alt="Description of Photo 6">
                     <div class="overlay">
                         <h3>Title of Photo 6</h3>
                         <p>A brief description or story behind the photo.</p>
@@ -100,12 +100,12 @@
         <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="/About/about.html">About</a></li>
-                <li><a href="/Skills/skill.html">Skills</a></li>
-                <li><a href="/Projects/project.html">Projects</a></li>
-                <li><a href="/Blogs/blog.html">Blogs</a></li>
-                <li><a href="/Photography/photo.html">Photography</a></li>
-                <li><a href="/Contacts/contact.html">Contacts</a></li>
+                <li><a href="/My-Creative-Space/About/about.html">About</a></li>
+                <li><a href="/My-Creative-Space/Skills/skill.html">Skills</a></li>
+                <li><a href="/My-Creative-Space/Projects/project.html">Projects</a></li>
+                <li><a href="/My-Creative-Space/Blogs/blog.html">Blogs</a></li>
+                <li><a href="/My-Creative-Space/Photography/photo.html">Photography</a></li>
+                <li><a href="/My-Creative-Space/Contacts/contact.html">Contacts</a></li>
             </ul>
         </div>
 
@@ -124,8 +124,8 @@
     
 </footer>
 
-    <script src="photo.js"></script> <!-- Link to external JavaScript file -->
-    <script src="/main.js"></script> <!-- Link to external JavaScript file -->
+    <script src="/My-Creative-Space/Photography/photo.js"></script> <!-- Link to external JavaScript file -->
+    <script src="/My-Creative-Space/main.js"></script> <!-- Link to external JavaScript file -->
     
 </body>
 </html>
