--- a/Skills/skill.html
+++ b/Skills/skill.html
@@ -5,29 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional-Skills Page</title>
-    <link rel="icon" type="image/x-icon" href="/Assets/favicon.png">
-    <link rel="stylesheet" href="skill.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/styles.css"> <!-- Link to external CSS file -->
+    <link rel="icon" type="image/x-icon" href="/My-Creative-Space/Assets/favicon.png">
+    <link rel="stylesheet" href="/My-Creative-Space/Skills/skill.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/My-Creative-Space/styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
 
     <header class="navbar" id="navbar">
         <div class="logo">
-            <a href="/index.html"><img src="/Assets/logo.png" alt="Website Logo"></a>
+            <a href="/My-Creative-Space/index.html"><img src="/My-Creative-Space/Assets/logo.png" alt="Website Logo"></a>
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/About/about.html">About</a></li>
-                <li><a href="/Skills/skill.html">Skills</a></li>
-                <li><a href="/Projects/project.html">Projects</a></li>
-                <li><a href="/Blogs/blog.html">Blogs</a></li>
+                <li><a href="/My-Creative-Space/index.html">Home</a></li>
+                <li><a href="/My-Creative-Space/About/about.html">About</a></li>
+                <li><a href="/My-Creative-Space/Skills/skill.html">Skills</a></li>
+                <li><a href="/My-Creative-Space/Projects/project.html">Projects</a></li>
+                <li><a href="/My-Creative-Space/Blogs/blog.html">Blogs</a></li>
                 <!-- Dropdown Menu Example -->
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">More</a>
                     <div class="dropdown-content">
-                        <a href="/Photography/photo.html">Photography</a>
-                        <a href="/Contacts/contact.html">Contacts</a>
+                        <a href="/My-Creative-Space/Photography/photo.html">Photography</a>
+                        <a href="/My-Creative-Space/Contacts/contact.html">Contacts</a>
                     </div>
                 </li>
             </ul>
@@ -198,12 +198,12 @@
         <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="/About/about.html">About</a></li>
-                <li><a href="/Skills/skill.html">Skills</a></li>
-                <li><a href="/Projects/project.html">Projects</a></li>
-                <li><a href="/Blogs/blog.html">Blogs</a></li>
-                <li><a href="/Photography/photo.html">Photography</a></li>
-                <li><a href="/Contacts/contact.html">Contacts</a></li>
+                <li><a href="/My-Creative-Space/About/about.html">About</a></li>
+                <li><a href="/My-Creative-Space/Skills/skill.html">Skills</a></li>
+                <li><a href="/My-Creative-Space/Projects/project.html">Projects</a></li>
+                <li><a href="/My-Creative-Space/Blogs/blog.html">Blogs</a></li>
+                <li><a href="/My-Creative-Space/Photography/photo.html">Photography</a></li>
+                <li><a href="/My-Creative-Space/Contacts/contact.html">Contacts</a></li>
             </ul>
         </div>
 
@@ -223,8 +223,8 @@
 </footer>
 
 
-    <script src="skill.js"></script> <!-- Link to external JavaScript file -->
-    <script src="/main.js"></script> <!-- Link to external JavaScript file -->
+    <script src="/My-Creative-Space/Skills/skill.js"></script> <!-- Link to external JavaScript file -->
+    <script src="/My-Creative-Space/main.js"></script> <!-- Link to external JavaScript file -->
 
 </body>
 </html>
