--- a/Skills/skill.html
+++ b/Skills/skill.html
@@ -49,19 +49,19 @@
                     <h3>Programming Languages</h3>
                     <ul class="skill-list">
                         <li>
-                            <img src="path/to/c-logo.png" alt="C Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="C Logo">
                             <span>C</span>
                         </li>
                         <li>
-                            <img src="path/to/cpp-logo.png" alt="C++ Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="C++ Logo">
                             <span>C++</span>
                         </li>
                         <li>
-                            <img src="path/to/java-logo.png" alt="Java Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Java Logo">
                             <span>Java</span>
                         </li>
                         <li>
-                            <img src="path/to/python-logo.png" alt="Python Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Python Logo">
                             <span>Python</span>
                         </li>
                     </ul>
@@ -72,19 +72,19 @@
                     <h3>Web Development</h3>
                     <ul class="skill-list">
                         <li>
-                            <img src="path/to/html-css-logo.png" alt="HTML & CSS Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="HTML & CSS Logo">
                             <span>HTML & CSS</span>
                         </li>
                         <li>
-                            <img src="path/to/js-logo.png" alt="JavaScript Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="JavaScript Logo">
                             <span>JavaScript</span>
                         </li>
                         <li>
-                            <img src="path/to/react-logo.png" alt="React.js Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="React.js Logo">
                             <span>React.js</span>
                         </li>
                         <li>
-                            <img src="path/to/nodejs-logo.png" alt="Node.js Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Node.js Logo">
                             <span>Node.js</span>
                         </li>
                     </ul>
@@ -95,19 +95,19 @@
                     <h3>Cloud & DevOps</h3>
                     <ul class="skill-list">
                         <li>
-                            <img src="path/to/aws-logo.png" alt="AWS Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="AWS Logo">
                             <span>AWS</span>
                         </li>
                         <li>
-                            <img src="path/to/docker-logo.png" alt="Docker Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Docker Logo">
                             <span>Docker & Kubernetes</span>
                         </li>
                         <li>
-                            <img src="path/to/jenkins-logo.png" alt="CI/CD Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="CI/CD Logo">
                             <span>CI/CD (Jenkins, GitLab)</span>
                         </li>
                         <li>
-                            <img src="path/to/terraform-logo.png" alt="Terraform Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Terraform Logo">
                             <span>Terraform</span>
                         </li>
                     </ul>
@@ -118,19 +118,19 @@
                     <h3>AI/ML & Data Science</h3>
                     <ul class="skill-list">
                         <li>
-                            <img src="path/to/tensorflow-logo.png" alt="TensorFlow Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="TensorFlow Logo">
                             <span>TensorFlow</span>
                         </li>
                         <li>
-                            <img src="path/to/scikit-learn-logo.png" alt="Scikit-learn Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Scikit-learn Logo">
                             <span>Scikit-learn</span>
                         </li>
                         <li>
-                            <img src="path/to/pandas-logo.png" alt="Pandas Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Pandas Logo">
                             <span>Pandas & NumPy</span>
                         </li>
                         <li>
-                            <img src="path/to/sql-nosql-logo.png" alt="SQL & NoSQL Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="SQL & NoSQL Logo">
                             <span>SQL & NoSQL</span>
                         </li>
                     </ul>
@@ -141,42 +141,42 @@
                     <h3>AI/ML & Data Science</h3>
                     <ul class="skill-list">
                         <li>
-                            <img src="path/to/tensorflow-logo.png" alt="TensorFlow Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="TensorFlow Logo">
                             <span>TensorFlow</span>
                         </li>
                         <li>
-                            <img src="path/to/scikit-learn-logo.png" alt="Scikit-learn Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Scikit-learn Logo">
                             <span>Scikit-learn</span>
                         </li>
                         <li>
-                            <img src="path/to/pandas-logo.png" alt="Pandas Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Pandas Logo">
                             <span>Pandas & NumPy</span>
                         </li>
                         <li>
-                            <img src="path/to/sql-nosql-logo.png" alt="SQL & NoSQL Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="SQL & NoSQL Logo">
                             <span>SQL & NoSQL</span>
                         </li>
                     </ul>
                 </div>
 
-                <!-- AI/ML & Data Science Section -->
+                <!-- Databases -->
                 <div class="skill">
-                    <h3>AI/ML & Data Science</h3>
+                    <h3>Databases</h3>
                     <ul class="skill-list">
                         <li>
-                            <img src="path/to/tensorflow-logo.png" alt="TensorFlow Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="TensorFlow Logo">
                             <span>TensorFlow</span>
                         </li>
                         <li>
-                            <img src="path/to/scikit-learn-logo.png" alt="Scikit-learn Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Scikit-learn Logo">
                             <span>Scikit-learn</span>
                         </li>
                         <li>
-                            <img src="path/to/pandas-logo.png" alt="Pandas Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Pandas Logo">
                             <span>Pandas & NumPy</span>
                         </li>
                         <li>
-                            <img src="path/to/sql-nosql-logo.png" alt="SQL & NoSQL Logo">
+                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="SQL & NoSQL Logo">
                             <span>SQL & NoSQL</span>
                         </li>
                     </ul>
