--- a/Skills/skill.html
+++ b/Skills/skill.html
@@ -164,20 +164,20 @@
                     <h3>Databases</h3>
                     <ul class="skill-list">
                         <li>
-                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="TensorFlow Logo">
-                            <span>TensorFlow</span>
+                            <img src="/My-Creative-Space/Skills/TechLogo/db.png" alt="MySQL and OracleSQL Logo">
+                            <span>MySQL & OracleSQL</span>
                         </li>
                         <li>
-                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Scikit-learn Logo">
-                            <span>Scikit-learn</span>
+                            <img src="/My-Creative-Space/Skills/TechLogo/mongodb.png" alt="MongoDB Logo">
+                            <span>MongoDB</span>
                         </li>
                         <li>
-                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="Pandas Logo">
-                            <span>Pandas & NumPy</span>
+                            <img src="/My-Creative-Space/Skills/TechLogo/postgredb.png" alt="PostgreSQL Logo">
+                            <span>PostgreSQL</span>
                         </li>
                         <li>
-                            <img src="/My-Creative-Space/Skills/TechLogo/mysqldb.png" alt="SQL & NoSQL Logo">
-                            <span>SQL & NoSQL</span>
+                            <img src="/My-Creative-Space/Skills/TechLogo/firebase.png" alt="Firebase Logo">
+                            <span>Firebase</span>
                         </li>
                     </ul>
                 </div>
